--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>hola formulario</h1>
+        <h1>Completar formulario</h1>
         <nav>
              <a href="Acercade.html" target="_blank">Volver a la página principal</a></li>            
         </nav>
