arreglos en codigo postal

--- a/formulario.html
+++ b/formulario.html
@@ -57,10 +57,10 @@
         
         <fieldset>
             <legend>Metodo de preferencia de suscripción</legend>
-            <input type="checkbox" name="noticias" value="1">Noticias
-            <input type="checkbox" name="promociones" value="2">Promociones
-            <input type="checkbox" name="alertas" value="3" checked="">alertas
-            <input type="checkbox" name="eventos" value="4">Eventos
+            <input type="checkbox" name="suscrip" value="1">Noticias
+            <input type="checkbox" name="suscrip" value="2">Promociones
+            <input type="checkbox" name="suscrip" value="3" checked="">alertas
+            <input type="checkbox" name="suscrip" value="4">Eventos
         </fieldset>
         
         <p><button type=”button” onclick="alert('Bienvenidos a mi mundo!')" name=”pulsame” value=”Pulsame”>Presione aquí! </button></p>
