--- a/formulario.html
+++ b/formulario.html
@@ -47,7 +47,7 @@
                     <option value="Tierra del Fuego">Tierra del Fuego</option></select></p>
             
             <label>Código Postal:</label>
-            <p><input type="text" name="Código Postal" pattern="[A-Za-z0-9]" placeholder="A1234ABC"></p>
+            <p><input type="text" name="CódigoPostal" pattern="[A-Za-z][0-9]{4}[A-Za-z]{3}" maxlength="8" placeholder="A1234ABC"></p>
         <fieldset>
             <legend>Método de preferencia de contacto:</legend>
             <input type="radio" name="contact" checked="" value="1">Correo Electrónico
