completo etiquete <li>

--- a/formulario.html
+++ b/formulario.html
@@ -10,7 +10,9 @@
     <header>
         <h1>Completar este formulario</h1>
         <nav>
-             <a href="Acercade.html" target="_blank">Volver a la página principal</a></li>            
+            <li>
+             <a href="Acercade.html" target="_blank">Volver a la página principal</a>
+            </li>            
         </nav>
     </header>
         
